# cmake_example

./: .gitignore  CMakeLists.txt  README.md  Rpkg_check.cmake  config.h.in
R/: test.Rmd  test.html
include/: myfun.h
src/: myfun.c  test.c  test2.c
